--- a/templates/misc/message.part.html
+++ b/templates/misc/message.part.html
@@ -220,7 +220,9 @@
                                               ico-after
                                               {% if message.like > message.dislike %}more-voted{% endif %}
                                               {% if message.like > 0 %}has-vote{% endif %}"
-                                        {% if message.like > 0 %}title="{{ message.like }} personnes ont trouvé ce message utile"{% endif %}
+                                        {% if message.like > 0 %}
+                                            title="{{ message.like }} personnes ont trouvé ce message utile"
+                                        {% endif %}
                                     >
                                         +{{ message.like }}
                                     </span>
@@ -229,7 +231,9 @@
                                               ico-after
                                               {% if message.like < message.dislike %}more-voted{% endif %} 
                                               {% if message.dislike > 0 %}has-vote{% endif %}"
-                                        {% if message.dislike > 0 %}title="{{ message.like }} personnes n'ont pas trouvé ce message utile"{% endif %}
+                                        {% if message.dislike > 0 %}
+                                            title="{{ message.like }} personnes n'ont pas trouvé ce message utile"
+                                        {% endif %}
                                     >
                                         -{{ message.dislike }}
                                     </span>
