--- a/assets/scss/_wide.scss
+++ b/assets/scss/_wide.scss
@@ -379,6 +379,10 @@
                 border-right-color: #FDFDFD;
             }
 
+            .is-author {
+                left: 5px;
+            }
+
             .message-content {
                 margin: 0 10px;
 
