--- a/templates/misc/badge.part.html
+++ b/templates/misc/badge.part.html
@@ -2,12 +2,12 @@
 
 
 
-{% with status=usr|state %}
+{% with status=member|state %}
     {% if status == 'BAN'%}
-        <span class="badge banned">Banni</span>
+        <span class="badge banned {% if push_badge %}push-badge{% endif %}">Banni</span>
     {% elif status == 'LS'%}
-        <span class="badge readonly">LS</span>
+        <span class="badge readonly {% if push_badge %}push-badge{% endif %}">LS</span>
     {% elif status == 'STAFF' %}
-        <span class="badge staff">Staff</span>
+        <span class="badge staff {% if push_badge %}push-badge{% endif %}">Staff</span>
     {% endif %}
 {% endwith %}
