Quitter le -> la

--- a/assets/scss/_wide.scss
+++ b/assets/scss/_wide.scss
@@ -243,7 +243,7 @@
                 margin-bottom: 0;
 
                 .open-zen-mode:before {
-                    content: "Quitter le ";
+                    content: "Quitter la ";
                 }
 
                 .reactions-title,
