Corrige la pagination online

--- a/templates/misc/pagination.part.html
+++ b/templates/misc/pagination.part.html
@@ -1,8 +1,20 @@
+{% load captureas %}
+
+
+
 {% if pages|length > 1 %}
+    {% captureas url %}
+        {% if is_online and topic.get_absolute_url_online %}
+            {{ topic.get_absolute_url_online }}
+        {% else %}
+            {{ topic.get_absolute_url }}
+        {% endif %}
+    {% endcaptureas %}
+
     <ul class="pagination pagination-{{ position }}">
         {% ifnotequal nb 1 %}
             <li class="prev">
-                <a href="{{ topic.get_absolute_url }}?page={{ nb|add:"-1" }}" class="ico-after arrow-left blue">
+                <a href="{{ url }}?page={{ nb|add:"-1" }}" class="ico-after arrow-left blue">
                     Précédente
                 </a>
             </li>
@@ -12,15 +24,14 @@
         {% for page in pages %}
             {% if page %}
                 <li>
-                    <a {% ifnotequal page nb %}href="{{ topic.get_absolute_url }}?page={{ page }}"{% else %}class="current"{% endifnotequal %}>
+                    <a {% ifnotequal page nb %}href="{{ url }}?page={{ page }}"{% else %}class="current"{% endifnotequal %}>
                         {{ page }}
                     </a>
                 </li>
             {% else %}
                 <li>
-                    {# TODO : Accès direct à une page donnée via JS #}
-                    <a href="#pagination-{{ topic.get_absolute_url }}-{{ position }}" class="open-modal">…</a>
-                    <form action="{{ topic.get_absolute_url }}" method="get" class="modal modal-small" id="pagination-{{ topic.get_absolute_url }}-{{ position }}">
+                    <a href="#pagination-{{ url }}-{{ position }}" class="open-modal">…</a>
+                    <form action="{{ url }}" method="get" class="modal modal-small" id="pagination-{{ url }}-{{ position }}">
                         <p>
                             Indiquez la page à laquelle vous souhaitez vous rendre.
                         </p>
@@ -35,7 +46,7 @@
         
         {% if pages|last > 0 and pages|last != nb %}
             <li class="next">
-                <a href="{{ topic.get_absolute_url }}?page={{ nb|add:"1" }}" class="ico-after arrow-right blue">
+                <a href="{{ url }}?page={{ nb|add:"1" }}" class="ico-after arrow-right blue">
                     Suivante
                 </a>
             </li>
