Correction typo message bienvenue

--- a/templates/home.html
+++ b/templates/home.html
@@ -65,7 +65,7 @@
     </section>
 
     <section class="content-col-2 tutorial-list">
-        <h2 class="ico-after ico-tutorials">Dernier tutoriels</h2>
+        <h2 class="ico-after ico-tutorials">Derniers tutoriels</h2>
         
         {% if last_tutorials %}
             {% for tutorial in last_tutorials %}
