--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
 
 {% block content_out %}
     <section class="content-col-2 tutorial-list">
-        <h2 class="ico-after ico-articles">Derniers Articles</h2>
+        <h2 class="ico-after ico-articles">Derniers articles</h2>
 
         {% if last_articles %}
             {% for article in last_articles %}
@@ -65,7 +65,7 @@
     </section>
 
     <section class="content-col-2 tutorial-list">
-        <h2 class="ico-after ico-tutorials">Dernier tutoriels</h2>
+        <h2 class="ico-after ico-tutorials">Derniers tutoriels</h2>
         
         {% if last_tutorials %}
             {% for tutorial in last_tutorials %}
