Normalisation du nom 'courriel'

--- a/templates/email/assoc/subscribe.html
+++ b/templates/email/assoc/subscribe.html
@@ -12,7 +12,7 @@
     <ul>
         <li>Prénom : {{ first_name }}</li>
         <li>Nom de famille : {{ surname }}</li>
-        <li>Adresse mail : {{ email }}</li>
+        <li>Adresse courriel : {{ email }}</li>
         <li>Adresse : {{ adresse }}, {{ adresse_complement }}</li>
         <li>CP et ville : {{ code_postal }} {{ ville }}</li>
         <li>Pays : {{ pays }}</li>
@@ -27,5 +27,5 @@
     </p>
 
     <p>Cordialement,<br/>
-    Le robot d'envoi des mails</p>
+    Clem</p>
 </body>
