--- a/templates/newsletter/index.html
+++ b/templates/newsletter/index.html
@@ -51,7 +51,7 @@
                     {% crispy form %}
 
                     <p class="email-note">
-                        Votre adresse email ne sera utilisée que pour vous envoyer notre newsletter, rien d'autre
+                        Votre adresse courriel ne sera utilisée que pour vous envoyer notre newsletter, rien d'autre.
                     </p>
                 </section>
 
