--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -23,12 +23,12 @@
 {% block content %}
     <h3>L'équipe de communication</h3>
     <p>
-       Vous pouvez à tout moment joindre l'équipe de communication de Zeste de Savoir par mail via <a href="mailto:communication@zestedesavoir.com?Subject=Contact communication" target="_top">communication@zestedesavoir.com</a>
+       Vous pouvez à tout moment joindre l'équipe de communication de Zeste de Savoir par courriel via <a href="mailto:communication@zestedesavoir.com?Subject=Contact communication" target="_top">communication@zestedesavoir.com</a>
     </p>
 
     <h3>L'association</h3>
     <p>
-       Vous pouvez joindre l'association par mail via <a href="mailto:association@zestedesavoir.com?Subject=Contact association" target="_top">association@zestedesavoir.com</a>
+       Vous pouvez joindre l'association par courriel via <a href="mailto:association@zestedesavoir.com?Subject=Contact association" target="_top">association@zestedesavoir.com</a>
     </p>
 
     <h3>Le staff</h3>
