--- a/templates/member/forgot_password/success.html
+++ b/templates/member/forgot_password/success.html
@@ -22,6 +22,6 @@
 
 {% block content %}
     <p>
-        Un courriel contenant de plus amples instructions d'activation a été envoyé. Le mail peut se trouver avec les spams.
+        Un courriel contenant de plus amples instructions d'activation a été envoyé. Ce courriel se trouve peut-être dans vos spams.
     </p>
 {% endblock %}
