--- a/templates/member/register/success.html
+++ b/templates/member/register/success.html
@@ -22,6 +22,6 @@
 
 {% block content %}
     <p>
-        Votre compte a été créé avec succès. Vous allez recevoir un email contenant un lien d'activation. Veuillez cliquer sur celui-ci avant toute tentative de connexion.
+        Votre compte a été créé avec succès. Vous allez recevoir un courriel contenant un lien d'activation. Veuillez cliquer sur celui-ci avant toute tentative de connexion.
     </p>
 {% endblock %}
