--- a/templates/newsletter/failed.html
+++ b/templates/newsletter/failed.html
@@ -10,9 +10,9 @@
             </header>
             <main role="main">
                 <section>
-                    <hgroup>
+                    <div class="title">
                         <h2>Vous êtes déjà inscrit à la newsletter !</h2>
-                    </hgroup>
+                    </div>
                 </section>
             </main>
         </div>
